--- a/expansion/cfd/mm/adapt/INL.cfg
+++ b/expansion/cfd/mm/adapt/INL.cfg
@@ -34,11 +34,7 @@ INL         ! Grid Name
 0          ! Number of boxes
 
 -- ESTIMATOR LIST --------------------------------------------------------------
-2     ! Number of estimators
-
-1     !  est #1 - Variable
-1     !  est #1 - Function
-2     !  est #1 - Number of sub-passages
+1     ! Number of estimators
 
 2     !  est #1 - Variable
 1     !  est #1 - Function
@@ -185,11 +181,13 @@ REF_DIMENSIONALIZATION= DIMENSIONAL
 % ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 FLUID_MODEL = COOLPROP
 FLUID_NAME = MM
+
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 % Euler wall boundary marker(s) (NONE = no marker)
-MARKER_EULER= ( 2,4,5, )
-MARKER_RIEMANN = (1, STATIC_SUPERSONIC_INFLOW_PT, 9.326e5, 664, 1.0, 0.0, 0.0, 3, STATIC_PRESSURE, 4e5, 0.0, 0.0, 0.0, 0.0)
+MARKER_EULER= ( 2, 4,5 )
+
+MARKER_RIEMANN = (1, STATIC_SUPERSONIC_INFLOW_PT, 9.326e5, 664, 1.0, 0.0, 0.0,  3, STATIC_PRESSURE, 4e5, 0.0, 0.0, 0.0, 0.0)
 
 % Marker(s) of the surface where the functional (Cd, Cl, etc.) will be evaluated
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
@@ -240,7 +238,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-ITER= 5000
+ITER= 3000
 CONV_FIELD= RMS_DENSITY
 CONV_RESIDUAL_MINVAL= -8
 CONV_STARTITER= 10
